# eidetica

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  Taskfile.yml  deny.toml  flake.nix  justfile  pyproject.toml
.config/: deny.toml  (+6 more)
crates/book-tests/: Cargo.toml  build.rs
crates/book-tests/src/: lib.rs
crates/lib/: CHANGELOG.md  Cargo.toml
crates/lib/benches/: backend_benchmarks.rs  benchmarks.rs  helpers.rs  iroh_benchmarks.rs  table_cache_benchmarks.rs
crates/lib/src/: atomicop.rs  basedb.rs  clock.rs  constants.rs  database.rs  entry.rs  height.rs  lib.rs  snapshot.rs  tree.rs
crates/lib/src/atomicop/: errors.rs  mod.rs
crates/lib/src/auth/: crypto.rs  errors.rs  mod.rs  permission.rs  settings.rs  types.rs  validation.rs
crates/lib/src/auth/types/: conversions.rs  delegation.rs  keys.rs  mod.rs  permissions.rs  tests.rs
crates/lib/src/auth/validation/: delegation.rs  entry.rs  mod.rs  permissions.rs  resolver.rs  tests.rs
crates/lib/src/backend/: errors.rs  in_memory.rs  mod.rs
crates/lib/src/backend/database/: mod.rs
crates/lib/src/basedb/: errors.rs  mod.rs
crates/lib/src/blob/: bao.rs  blob_ref.rs  mod.rs
crates/lib/src/crdt/: array.rs  doc.rs  errors.rs  map.rs  mod.rs  nested.rs  node.rs  traits.rs  value.rs
crates/lib/src/crdt/doc/: list.rs  mod.rs  node.rs  node_tests.rs  path.rs  value.rs
crates/lib/src/crdt/map/: array.rs  implementation.rs  list.rs  mod.rs  tests.rs
crates/lib/src/data/: mod.rs  types.rs
crates/lib/src/database/: mod.rs  ops.rs  tests.rs
crates/lib/src/entry/: builder.rs  errors.rs  id.rs  mod.rs  tests.rs
crates/lib/src/instance/: backend.rs  errors.rs  legacy_ops.rs  mod.rs  new_user.rs  settings_merge.rs  tests.rs  url.rs
crates/lib/src/instance/backend/: local.rs  mod.rs  remote.rs
crates/lib/src/service/: cache.rs  client.rs  error.rs  mod.rs  protocol.rs  server.rs
crates/lib/src/store/: docstore.rs  errors.rs  index_store.rs  mod.rs  password_store.rs  registry.rs  settings_store.rs  table.rs  value_editor.rs  ydoc.rs
crates/lib/src/subtree/: dict.rs  doc.rs  docstore.rs  errors.rs  kvstore.rs  mod.rs  rowstore.rs  table.rs  ydoc.rs  yrsstore.rs
crates/lib/src/sync/: background.rs  bootstrap.rs  bootstrap_request_manager.rs  error.rs  handler.rs  handler_tree_ops.rs  hooks.rs  mod.rs  ops.rs  peer.rs  peer_manager.rs  peer_types.rs  protocol.rs  queue.rs  state.rs  ticket.rs  transport.rs  transport_manager.rs  user.rs  user_sync_manager.rs  utils.rs
crates/lib/src/sync/background/: conn.rs  mod.rs
crates/lib/src/sync/transports/: http.rs  iroh.rs  mod.rs  shared.rs
crates/lib/src/transaction/: errors.rs  mod.rs  tests.rs
crates/lib/src/user/: admin.rs  crypto.rs  errors.rs  key_manager.rs  mod.rs  system_databases.rs  types.rs  user_session.rs
crates/lib/src/user/session/: builder.rs  mod.rs  tests.rs
crates/lib/tests/it/: atomicop.rs  backend.rs  basedb.rs  context.rs  data.rs  entry.rs  helpers.rs  main.rs  mod.rs  parent_aware_merge.rs  service.rs  settings_metadata.rs  subtree.rs  tree.rs  tree_api.rs
crates/lib/tests/it/atomicop/: basic_operations.rs  custom_tips.rs  data_operations.rs  helpers.rs  integration.rs  mod.rs  path_finding.rs
crates/lib/tests/it/auth/: crypto.rs  delegated_trees.rs  error_handling_tests.rs  helpers.rs  integration.rs  mod.rs  permission_edge_cases.rs  security_tests.rs  sig_key_edge_cases.rs  types.rs  validation.rs
crates/lib/tests/it/backend/: basic_operations.rs  blob_storage.rs  concurrent_writes.rs  height_calculations.rs  helpers.rs  mod.rs  out_of_order_tips.rs  save_load.rs  subtree_operations.rs  tree_operations.rs  verification.rs
crates/lib/tests/it/basedb/: database_operations.rs  helpers.rs  mod.rs  settings_operations.rs  tree_management.rs
crates/lib/tests/it/crdt/: doc_advanced_tests.rs  doc_tests.rs  helpers.rs  improved_interface_tests.rs  integration.rs  list_tests.rs  map_advanced_tests.rs  map_tests.rs  mod.rs  serialization_tests.rs  value_tests.rs
crates/lib/tests/it/data/: helpers.rs  integration.rs  mod.rs  path_operations.rs  serialization.rs  value_editor.rs
crates/lib/tests/it/database/: api_methods.rs  core_operations.rs  create_with_init.rs  helpers.rs  merge_algorithms.rs  mod.rs  settings_metadata.rs
crates/lib/tests/it/entry/: basic.rs  builder.rs  helpers.rs  id_determinism.rs  integration.rs  mod.rs  store.rs  subtree.rs  version.rs
crates/lib/tests/it/instance/: basic_operations.rs  blob_pinning.rs  blob_storage.rs  database_management.rs  database_operations.rs  helpers.rs  mod.rs  settings_operations.rs  sync_integration.rs
crates/lib/tests/it/store/: docstore_operations.rs  helpers.rs  index_store.rs  integration.rs  mod.rs  password_store.rs  table_operations.rs  ydoc_operations.rs
crates/lib/tests/it/subtree/: dict_operations.rs  docstore_operations.rs  helpers.rs  integration.rs  mod.rs  table_operations.rs  ydoc_operations.rs
crates/lib/tests/it/sync/: auto_peer_registration_tests.rs  auto_sync_e2e_test.rs  auto_sync_tests.rs  background_sync_tests.rs  basic_operations.rs  bidirectional_sync_test.rs  blob_fetch_tests.rs  bootstrap_client_behavior_test.rs  bootstrap_concurrency_tests.rs  bootstrap_failure_tests.rs  bootstrap_policy_bug_test.rs  bootstrap_sync_tests.rs  bootstrap_with_key_tests.rs  chat_simulation_test.rs  dag_sync_tests.rs  declarative_api_tests.rs  device_id_tests.rs  end_to_end_sync_tests.rs  helpers.rs  http_transport_tests.rs  integration_tests.rs  iroh_e2e_test.rs  iroh_transport_tests.rs  manual_approval_test.rs  mod.rs  multi_transport_tests.rs  peer_management_tests.rs  queue_flush_tests.rs  sync_enabled_security_tests.rs  sync_iroh_integration.rs  sync_protocol_tests.rs  test_transport_peer_tracking.rs  ticket_sync_tests.rs  transport_auto_detection_tests.rs  transport_conformance.rs  transport_integration_tests.rs  (+2 more)
examples/chat/: Cargo.toml  README.md
examples/chat/src/: app.rs  handlers.rs  main.rs  models.rs  ui.rs
examples/todo/: Cargo.toml  README.md  test.sh
examples/todo/src/: main.rs
(+223 files in other folders)
