[workspace]
members = ["crates/lib", "crates/bin", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/arcuru/eidetica"
homepage = "https://eidetica.dev"
readme = "README.md"
description = "Remember everything."

[workspace.metadata.crane]
name = "eidetica"

[workspace.dependencies]
# Shared dependencies
chrono = "0.4"
base64ct = { version = "1.6", features = ["std"] }
ed25519-dalek = { version = "2", default-features = false }
rand = "0.8"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
blake3 = "1.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
typetag = "0.2.2"
uuid = { version = "1", features = ["v4"] }
yrs = "0.23"
signal-hook = "0.3"
tempfile = "3"
criterion = "0.5"
# User system cryptography
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
# Networking dependencies
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "io-util",
] }
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
async-trait = "0.1"
iroh = { version = "0.91", default-features = false }
# Example-only dependencies
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Profile configuration for optimizing builds
[profile.dev]
# Keep the local package as debug build for fast compilation
opt-level = 0
# But compile dependencies with optimizations for better performance
[profile.dev.package."*"]
opt-level = 3

# Optimized benchmark profile
[profile.bench]
inherits = "release"
lto = true
codegen-units = 1
