[workspace]
members = ["crates/lib", "crates/bin", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Patrick Jackson <patrick@jackson.dev>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/arcuru/eidetica"
homepage = "https://eidetica.dev"
readme = "README.md"
description = "Decentralized DB. Remember Everything. Everywhere. All At Once."

[workspace.metadata.crane]
name = "eidetica"

[workspace.dependencies]
# Shared dependencies
chrono = "0.4"
base64ct = { version = "1.8", features = ["std"] }
ed25519-dalek = { version = "2", default-features = false }
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
blake3 = "1.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
yrs = "0.25"
signal-hook = "0.3"
tempfile = "3"
criterion = "0.8"
ctor = "0.6"
# User system cryptography
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
handle_trait = "1.1"
# Networking dependencies
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "io-util",
] }
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
tower-cookies = "0.11"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
async-trait = "0.1"
iroh = { version = "0.95", default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any"] }
# Example-only dependencies
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.29"

# Profile configuration for optimizing builds
[profile.dev]
# Keep the local package as debug build for fast compilation
opt-level = 0
# But compile dependencies with optimizations for better performance
[profile.dev.package."*"]
opt-level = 3

# Optimized benchmark profile
[profile.bench]
inherits = "release"
lto = true
codegen-units = 1
