[project]
name = "eidetica"
version = "0.1.0"
description = "Remember everything."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0",
    "termcolor>=2.5.0",
    "textual>=0.54.2",
]
license = "LicenseRef-FSL-1.1-MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Patrick Jackson", email = "patrick@jackson.dev" },
]

[project.scripts]
eidetica = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
