[package]
name = "eidetica"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[features]
default = []
y-crdt = ["yrs"]
full = ["y-crdt"]

[dependencies]
chrono = { workspace = true }
base64ct = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
typetag = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
yrs = { workspace = true, optional = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
iroh = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ctor = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "backend_benchmarks"
harness = false

[[bench]]
name = "iroh_benchmarks"
harness = false