[package]
name = "example-chat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TUI chat application using Eidetica"
publish = false

[dependencies]
eidetica = { path = "../../crates/lib", features = ["y-crdt"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
