[package]
name = "example-todo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Todo list example using Eidetica"
publish = false

[dependencies]
eidetica = { path = "../../crates/lib", features = ["y-crdt"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true }
